k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-service-ingress
  labels:
    app: auth-service
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: bbapp-prod-cors-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: auth.api.bbapp.in
    http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - auth.api.bbapp.in
    secretName: auth-service-tls
